Cleaned up the CSS

--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
 		</head>
 		<body>
 
+			<div id='container'>
+
 			<div id='header'>
 				<h1>Twittler</h1>
-				<button>All New Tweets</button>
+				<button>Refresh New Tweets</button>
 			</div>
-
-			<!-- <div id='sidebar'>
-				<button>Refresh</button>
-			 --></div>
-			<!-- <div id='tweetstream-container'> -->
 			<div class='tweetstream'>
 			</div>
-			<!-- </div> -->
 
 			<script>
 
@@ -102,12 +98,9 @@
 					//   }, 500);
 					// };
 
-					// Initial pageload
-
-					
-
 				});
 
 			</script>
+		</div>
 		</body>
 	</html>
